--- a/bot/admin/web/src/app/shared/date-range/date-range-calendar.component.css
+++ b/bot/admin/web/src/app/shared/date-range/date-range-calendar.component.css
@@ -3,7 +3,8 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  margin-left: -5rem;
+  margin-left: -5.5rem;
+  margin-top: -1rem;
 }
 
 .calendar-body {
