--- a/bot/admin/web/src/app/shared/date-range/date-range-calendar.component.html
+++ b/bot/admin/web/src/app/shared/date-range/date-range-calendar.component.html
@@ -1,10 +1,10 @@
-<button outline nbButton status="{{disabledOrModified() ? 'disabled' : 'primary'}}"
+<button outline nbButton status="{{disabledOrModified() ? 'disabled' : 'primary'}}" size="small"
         disabled="disabledOrModified()" title="From {{ range.start }} to {{ range.end }}"
         [nbPopover]="templateRef" nbPopoverPlacement="bottom" nbPopoverTrigger="click">
   {{ range.start | date }} - {{ range.end | date }}
 </button>
 
-<ng-template #templateRef style="">
+<ng-template #templateRef>
   <nb-card accent="info" *ngIf="!disabled" class="calendar-panel">
     <nb-card-body class="calendar-body">
       <div class="calendar-shortcuts">
