--- a/bot/admin/web/src/app/shared/select-bot/select-bot.component.html
+++ b/bot/admin/web/src/app/shared/select-bot/select-bot.component.html
@@ -20,7 +20,7 @@
 <div *ngIf="configurations && configurations.length !== 0">
   <span class="select-configuration"
         *ngIf="botNames && (allowNoSelection || botNames.length > 1)">
-    <nb-select (selectedChange)="changeBotName()" status="primary"
+    <nb-select (selectedChange)="changeBotName()" status="primary" size="small"
                placeholder="Select a configuration"
                [(ngModel)]="currentBotName" class="select-width">
       <nb-option *ngIf="allowNoSelection" value="None">{{noConfigurationLabel}}</nb-option>
