--- a/nlp/admin/web/src/app/test-nlp/test-builds.component.css
+++ b/nlp/admin/web/src/app/test-nlp/test-builds.component.css
@@ -19,7 +19,6 @@
 }
 
 .search {
-  width:80%;
   margin-left: auto;
   margin-right: auto;
   margin-top:20px;
@@ -28,4 +27,23 @@
 
 .search-input {
   font-size: large;
+  width: 18rem;
 }
+
+.inline {
+  display: inline-block;
+}
+
+.nb-form-field {
+  position: relative;
+  padding-right: 10px;
+}
+
+.nb-form-field > label {
+  display: block;
+  font-size: x-small;
+  pointer-events: none;
+  font-weight: bold;
+  text-align: left;
+}
+
