--- a/nlp/admin/web/src/app/test-nlp/test-builds.component.html
+++ b/nlp/admin/web/src/app/test-nlp/test-builds.component.html
@@ -14,27 +14,28 @@
   ~ limitations under the License.
   -->
 
-<mat-card class="search">
-  <mat-card-content>
-    <mat-form-field class="intent">
-      <mat-select placeholder="Intent" [(ngModel)]="intent" (selectionChange)="search()" class="search-input">
-        <mat-option value="">All</mat-option>
-        <mat-optgroup *ngFor="let category of state.currentIntentsCategories | async" [label]="category.category">
-          <mat-option *ngFor="let intent of category.intents" [value]="intent.qualifiedName()">
+<nb-card class="search">
+  <nb-card-body>
+    <span class="intent nb-form-field inline">
+      <label>Intent</label>
+      <nb-select placeholder="Intent" [(ngModel)]="intent" (selectedChange)="search(null)" class="search-input">
+        <nb-option value="">All</nb-option>
+        <nb-option-group *ngFor="let category of state.currentIntentsCategories | async" [title]="category.category">
+          <nb-option *ngFor="let intent of category.intents" [value]="intent.qualifiedName()">
             {{intent.intentLabel()}}
-          </mat-option>
-        </mat-optgroup>
-        <mat-option value="unknown">Unknown</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field class="search-criterion">
-      <input matInput [matDatepicker]="after" placeholder="Data after" [(ngModel)]="modifiedAfter"
-             (dateChange)="search()">
-      <mat-datepicker-toggle matSuffix [for]="after"></mat-datepicker-toggle>
-      <mat-datepicker #after (selectedChanged)="search()"></mat-datepicker>
-    </mat-form-field>
-  </mat-card-content>
-</mat-card>
+          </nb-option>
+        </nb-option-group>
+        <nb-option value="unknown">Unknown</nb-option>
+      </nb-select>
+    </span>
+    <span class="intent nb-form-field inline">
+      <label>Data after</label>
+      <input nbInput placeholder="Data after" [nbDatepicker]="dateTimePicker" [(ngModel)]="modifiedAfter">
+      <nb-datepicker #dateTimePicker (dateChange)="search($event)"></nb-datepicker>
+    </span>
+    
+  </nb-card-body>
+</nb-card>
 <h2 *ngIf="nodata" class="search">
   No Data
 </h2>
