--- a/bot/admin/web/src/app/analytics/activity/activity.component.css
+++ b/bot/admin/web/src/app/analytics/activity/activity.component.css
@@ -6,3 +6,70 @@
   display: inline-flex;
   margin-left: 10px;
 }
+
+.stats {
+  margin: 8px;
+  margin-left: 1px;
+  margin-right: 1px;
+  height: 100px;
+  padding: 12px 24px;
+  flex-grow: 1;
+  flex-basis: 0;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  overflow: visible;
+}
+
+.graph {
+  min-height: 35rem;
+  min-width: 50%;
+  flex-basis: 0;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  margin-bottom: 0.4rem;
+}
+
+.graph-list {
+  height: auto;
+  min-height: 2rem;
+  width: 100%;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
+  padding: 0;
+  overflow: visible;
+}
+
+.space {
+  flex-wrap: wrap;
+  display: flex;
+}
+
+.space-component3 {
+  height: 80px;
+  flex-grow: 1;
+  flex-basis: 0;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0;
+  overflow: visible;
+  background-color: unset;
+}
+
+.icon-space {
+  height: 52px;
+  width: 52px;
+  border: 0 solid #fff;
+  border-radius: 50%;
+  border-right: 26px;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  padding: 0;
+  overflow: visible;
+}
