--- a/bot/admin/web/src/app/analytics/activity/activity.component.html
+++ b/bot/admin/web/src/app/analytics/activity/activity.component.html
@@ -1,67 +1,114 @@
 <div class="content" id="element-id">
-  <nb-card>
-    <nb-card-body [nbSpinner]="loading" nbSpinnerStatus="primary">
+  <nb-card style="margin-bottom: unset;">
+    <nb-card-body nbSpinnerStatus="primary">
       <date-range-calendar [rangeInDays]="7" (datesChanged)="datesChanged($event)"></date-range-calendar>
       <tock-select-bot [allowNoConfigurationSelection]="true" noConnectorLabel="All Connectors"
                        [allowNoSelection]="true" noConfigurationLabel="All Configurations"
                        (selectionChange)="selectedConfigurationChanged($event)" class="select-bot">
       </tock-select-bot>
-      <button nbButton shape="round" (click)="waitAndRefresh()" nbTooltip="Refresh" status="basic">
+      <button nbButton shape="round" ghost (click)="waitAndRefresh()" nbTooltip="Refresh" status="basic">
         <nb-icon icon="refresh-outline"></nb-icon>
       </button>
       <span style="float: right; padding: 5px;">&nbsp;&nbsp;
-        <nb-toggle status="warning" [(ngModel)]="displayTests" (change)="waitAndRefresh()">
+        <nb-toggle status="warning" [(ngModel)]="displayTests" (change)="waitAndRefresh()" size="small">
           Tests (Tock Studio)
         </nb-toggle>
       </span>
     </nb-card-body>
   </nb-card>
+  <div class="space graph-list">
+    <nb-card class="stats" [nbSpinner]="usersPercentageLoading">
+      <div class="space space-component3">
+        <span class="text text-hint caption">Users</span>
+        <h5 class="heading1 text-basic">{{currentFilterNbUsers}}</h5>
+        <span class="text text-hint caption">
+          <nb-icon  [icon]="getSmallIcon(beforeCurrentFilterNbUsers, currentFilterNbUsers)" 
+          [status]="getIconStatus(beforeCurrentFilterNbUsers, currentFilterNbUsers)"></nb-icon>
+          {{variationUsersPercentage}}% vs prev. {{getNumberOfDays()}} days</span>
+      </div>
+      <div class="space icon-space">
+        <button nbButton [status]="getIconStatus(beforeCurrentFilterNbUsers, currentFilterNbUsers)" shape="round">
+          <nb-icon [icon]="getBigIcon(beforeCurrentFilterNbUsers, currentFilterNbUsers)"></nb-icon>
+        </button>
+      </div>
+    </nb-card>
+    <nb-card class="stats" [nbSpinner]="messagesPercentageLoading">
+      <div class="space space-component3">
+        <span class="text text-hint caption">Messages</span>
+        <h5 class="heading1 text-basic">{{currentFilterNbMessages}}</h5>
+        <span class="text text-hint caption">
+          <nb-icon  [icon]="getSmallIcon(beforeCurrentFilterNbMessages, currentFilterNbMessages)" 
+          [status]="getIconStatus(beforeCurrentFilterNbMessages, currentFilterNbMessages)"></nb-icon>
+          {{variationMessagesPercentage}}% vs prev. {{getNumberOfDays()}} days</span>
+      </div>
+      <div class="space icon-space" >
+        <button nbButton [status]="getIconStatus(beforeCurrentFilterNbMessages, currentFilterNbMessages)" shape="round">
+          <nb-icon [icon]="getBigIcon(beforeCurrentFilterNbMessages, currentFilterNbMessages)"></nb-icon>
+        </button>
+      </div>
+    </nb-card>
+    <!-- <nb-card class="stats">
+      <div class="space space-component3">
+        <span class="text text-hint caption">New users</span>
+        <h5 class="heading1 text-basic">1234</h5>
+        <span class="text text-hint caption">
+          <nb-icon  icon="minus-outline" status="basic"></nb-icon>
+          100% vs prev. 28 days</span>
+      </div>
+      <div class="space icon-space">
+        <button nbButton status="basic" shape="round">
+          <nb-icon icon="minus-outline"></nb-icon>
+        </button>
+      </div>
+    </nb-card> -->
+  </div>
 
-  <nb-accordion>
-    <nb-accordion-item #messagesByTypeItem (collapsedChange)="collapsedChange($event)" *ngIf="userPreferences.graphs.activity.messagesAll">
-      <nb-accordion-item-header>Messages</nb-accordion-item-header>
-      <nb-accordion-item-body>
+  <div class="space graph-list">
+
+    <nb-card class="space graph" *ngIf="userPreferences.graphs.activity.messagesAll">
+      <nb-card-body>
         <tock-chart [data]="messagesByTypeData" title="Messages" [chartPreferences]="userPreferences"
-                    [isLoading]="messagesByTypeLoading" pdfId="messages"></tock-chart>
-      </nb-accordion-item-body>
-    </nb-accordion-item>
-    <nb-accordion-item #messagesByDaysItem (collapsedChange)="collapsedChange($event)">
-      <nb-accordion-item-header>Messages by days in calendar</nb-accordion-item-header>
-      <nb-accordion-item-body>
-        <tock-chart [data]="messagesByDaysData" title="Messages by days in calendar" [chartPreferences]="userPreferences" type="Calendar" *ngIf="userPreferences.graphs.activity.messagesByDays"
-                    [isLoading]="messagesByDaysLoading" pdfId="messagesCalendar"></tock-chart>
-      </nb-accordion-item-body>
-    </nb-accordion-item>
-    <nb-accordion-item #messagesByStoryItem (collapsedChange)="collapsedChange($event)" *ngIf="userPreferences.graphs.activity.messagesByStory">
-      <nb-accordion-item-header>Messages by Story</nb-accordion-item-header>
-      <nb-accordion-item-body>
+                    [isLoading]="messagesByTypeLoading"></tock-chart>
+      </nb-card-body>
+    </nb-card>
+    <nb-card class="space graph" *ngIf="userPreferences.graphs.activity.users">
+      <nb-card-body>
+        <tock-chart [data]="activeUsersData" title="Users" [chartPreferences]="userPreferences"
+                    [isLoading]="activeUsersLoading"></tock-chart>
+      </nb-card-body>
+    </nb-card>
+    <nb-card class="space graph" *ngIf="userPreferences.graphs.activity.messagesByDays">
+      <nb-card-body>
+        <tock-chart [data]="messagesByDaysData" title="Messages by days in calendar" [chartPreferences]="userPreferences" type="Calendar" isMultiChart="false"
+                    [isLoading]="messagesByDaysLoading"></tock-chart>
+      </nb-card-body>
+    </nb-card>
+    <nb-card class="space graph" *ngIf="userPreferences.graphs.activity.messagesByStory">
+      <nb-card-body>
         <tock-chart [data]="messagesByStoryData" title="Messages by Story" [chartPreferences]="userPreferences"
                     [isLoading]="messagesByStoryLoading"></tock-chart>
-      </nb-accordion-item-body>
-    </nb-accordion-item>
-    <nb-accordion-item #messagesByIntentItem (collapsedChange)="collapsedChange($event)" *ngIf="userPreferences.graphs.activity.messagesByIntent">
-      <nb-accordion-item-header>Messages by Intent</nb-accordion-item-header>
-      <nb-accordion-item-body>
+      </nb-card-body>
+    </nb-card>
+    <nb-card class="space graph" *ngIf="userPreferences.graphs.activity.messagesByIntent">
+      <nb-card-body>
         <tock-chart [data]="messagesByIntentData" title="Messages by Intent" [chartPreferences]="userPreferences"
                     [isLoading]="messagesByIntentLoading"></tock-chart>
-      </nb-accordion-item-body>
-    </nb-accordion-item>
-    <nb-accordion-item #messagesByConfigurationItem (collapsedChange)="collapsedChange($event)"
-                       *ngIf="userPreferences.graphs.activity.messagesByConfiguration">
-      <nb-accordion-item-header>Messages by Configuration</nb-accordion-item-header>
-      <nb-accordion-item-body>
+      </nb-card-body>
+    </nb-card>
+
+    <nb-card class="space graph" *ngIf="userPreferences.graphs.activity.messagesByConfiguration">
+      <nb-card-body>
         <tock-chart [data]="messagesByConfigurationData" title="Messages by Configuration" [chartPreferences]="userPreferences"
                     [isLoading]="messagesByConfigurationLoading"></tock-chart>
-      </nb-accordion-item-body>
-    </nb-accordion-item>
-    <nb-accordion-item #messagesByConnectorItem (collapsedChange)="collapsedChange($event)"
-                       *ngIf="userPreferences.graphs.activity.messagesByConnector">
-      <nb-accordion-item-header>Messages by Connector Type</nb-accordion-item-header>
-      <nb-accordion-item-body>
+      </nb-card-body>
+    </nb-card>
+
+    <nb-card class="space graph" *ngIf="userPreferences.graphs.activity.messagesByConnector">
+      <nb-card-body>
         <tock-chart [data]="messagesByConnectorData" title="Messages by Connector Type" [chartPreferences]="userPreferences"
                     [isLoading]="messagesByConnectorLoading"></tock-chart>
-      </nb-accordion-item-body>
-    </nb-accordion-item>
-  </nb-accordion>
+      </nb-card-body>
+    </nb-card>
 
+  </div>
 </div>
