--- a/bot/admin/web/src/app/analytics/chart/chart.component.html
+++ b/bot/admin/web/src/app/analytics/chart/chart.component.html
@@ -1,10 +1,27 @@
 
-<nb-flip-card [showToggleButton]="false" [flipped]="isFlipped" *ngIf="mainChart || altChart">
+<nb-flip-card [showToggleButton]="false" [flipped]="isFlipped" *ngIf="mainChart || altChart" style="min-height: 60vh">
   <nb-card-front >
-    <nb-card style="min-height: 60vh">
+    <nb-card >
+      <nb-card-header style="padding-right: 0;">
+        {{title}}
+        <button *ngIf="!isFullScreen" nbButton ghost status="info" shape="round" (click)="expand()" nbTooltip="Expand" style="float: right;" >
+          <nb-icon icon="expand-outline"></nb-icon>
+        </button>
+        <button nbButton ghost status="info" shape="round" (click)="onCsvAction()" nbTooltip="Export data as CSV"  style="float: right;">
+          <nb-icon icon="download"></nb-icon>
+        </button>
+        <button *ngIf="type!='PieChart' && isMultiChart==true" nbButton ghost status="info" shape="round" (click)="changeChartType('PieChart')" 
+                nbTooltip="Pie chart"  style="float: right;">
+          <nb-icon icon="pie-chart-outline"></nb-icon>
+        </button>
+        <button *ngIf="type=='PieChart' && isMultiChart==true" nbButton ghost status="info" shape="round" (click)="changeChartType('line')" 
+                nbTooltip="Line chart"  style="float: right;">
+          <nb-icon icon="trending-up-outline"></nb-icon>
+        </button>
+      </nb-card-header>
       <nb-card-body [nbSpinner]="isLoading" nbSpinnerStatus="primary" >
         <div style="text-align: right;">
-          <nb-select multiple status="primary" *ngIf="displayMultipleSelectComponent()" style="min-width: 15rem;max-width: 20rem;"
+          <nb-select multiple status="primary" *ngIf="displayMultipleSelectComponent()" style="min-width: 15rem;max-width: 20rem;" size="small"
                      [(selected)]="seriesSelectionList" (selectedChange)="updateGraph()">
             <nb-select-label>
               Nb selected: {{ seriesSelectionList.length }}
@@ -18,44 +35,24 @@
           </nb-select>
         </div>
 
-        <div style="display: flex;" [id]="pdfId">
-
-          <google-chart *ngIf="mainChart"
-            [type]="mainChart.type"
-            [data]="mainChart.data"
-            [columns]="mainChart.columnNames"
-            [options]="mainChart.options"
-            [height]="mainChart.height"
-            [dynamicResize]="true"
-            [style.width]="(altChart || isGraphTypeSelected('pie')) ? '70%' : '100%'">
-          </google-chart>
-          <google-chart *ngIf="altChart && isGraphTypeSelected('all')"
-            [type]="altChart.type"
-            [data]="altChart.data"
-            [columns]="altChart.columnNames"
-            [options]="altChart.options"
-            [height]="altChart.height"
-            [dynamicResize]="true"
-            [style]="isGraphTypeSelected('line') ?'width: 30%;' : 'width: 100%;'">
-          </google-chart>
+        <div style="display: flex;">
+          <div echarts [options]="chartOptions" *ngIf="chartOptions" [style.width]="'100%'"></div>
         </div>
+        
       </nb-card-body>
       <nb-card-body>
-        <button nbButton shape="round" (click)="onFlipAction()" nbTooltip="Show Table"
+        <!-- <button nbButton shape="round" (click)="onFlipAction()" nbTooltip="Show Table"
                 status="success" style="float: right;">
           <nb-icon icon="layout-outline"></nb-icon>
-        </button>
-        <button nbButton outline shape="round" (click)="onCsvAction()" nbTooltip="Export data as CSV"
-                status="primary" style="float: right; margin-right: 20px;">
-          CSV <nb-icon icon="download"></nb-icon>
-        </button>
+        </button> -->
+        
       </nb-card-body>
     </nb-card>
   </nb-card-front>
   <nb-card-back>
     <nb-card>
       <nb-card-body>
-          <google-chart
+          <!-- <google-chart
             type="Table"
             [data]="mainChart.data"
             [columns]="mainChart.columnNames"
@@ -64,7 +61,7 @@
             [dynamicResize]="true"
             width="73vw"
             style="overflow-x: auto;">
-          </google-chart>
+          </google-chart> -->
       </nb-card-body>
       <nb-card-footer>
         <button nbButton shape="round" (click)="onFlipAction()" nbTooltip="Show Chart"
