--- a/nlp/admin/web/src/app/applications/user/user-logs.component.html
+++ b/nlp/admin/web/src/app/applications/user/user-logs.component.html
@@ -14,51 +14,46 @@
   ~ limitations under the License.
   -->
 
-<div class="builds">
-
-  <mat-table [dataSource]="dataSource" class="builds-table">
-
-    <ng-container matColumnDef="date">
-      <mat-header-cell *matHeaderCellDef> Date</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.date | amDateFormat: 'YYYY-MM-DD HH:mm' }}
-      </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="type">
-      <mat-header-cell *matHeaderCellDef> Type</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.actionType}}</mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="user">
-      <mat-header-cell *matHeaderCellDef> User</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.login}}</mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="application">
-      <mat-header-cell *matHeaderCellDef> Application</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{appName(row.applicationId)}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="data">
-      <mat-header-cell *matHeaderCellDef class="width"> Data</mat-header-cell>
-      <mat-cell *matCellDef="let row" class="width">
-        <button *ngIf="row.newData" nbButton outline shape="round" (click)="displayData(row)">Display</button>
-      </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="error">
-      <mat-header-cell *matHeaderCellDef class="error"> Error</mat-header-cell>
-      <mat-cell *matCellDef="let row" class="error"><span *ngIf="row.error"><mat-icon
-        style="color: red">error</mat-icon></span></mat-cell>
-    </ng-container>
-
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
-
-  <mat-paginator [length]="dataSource.size"
-                 [pageIndex]="0"
-                 [pageSize]="10"
-                 [pageSizeOptions]="[5, 10, 25, 100]">
-  </mat-paginator>
-</div>
+<nb-card>
+  <nb-card-body>
+  <table *ngIf="dataSource.length !== 0" class="table table-sm table-fixed">
+    <thead>
+    <tr>
+      <th><p>Date</p></th>
+      <th><p>Type</p></th>
+      <th><p>User</p></th>
+      <th><p>Application</p></th>
+      <th><p>Data</p></th>
+      <th><p>Error</p></th>
+    </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let row of dataSource; index as i">
+        <td><p>{{row.date | amDateFormat: 'YYYY-MM-DD HH:mm' }}</p></td>
+        <td><p>{{row.actionType}}</p></td>
+        <td><p>{{row.login}}</p></td>
+        <td><p>{{appName(row.applicationId)}}</p></td>
+        <td><p><button nbButton ghost size="tiny" *ngIf="row.newData" (click)="displayData(row)">
+                  <mat-icon>visibility</mat-icon>
+                </button>
+              </p>
+        </td>
+        <td><p class="error">
+            <span *ngIf="row.error"><mat-icon style="color: red">error</mat-icon></span>
+            </p>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <div *ngIf="dataSource.length !== 0" class="d-flex justify-content-center">
+    <nb-select [(ngModel)]="pageSize" (ngModelChange)="search()" nbTooltip="Items per page:">
+      <nb-option [value]="10">10</nb-option >
+      <nb-option [value]="20">20</nb-option >
+      <nb-option [value]="50">50</nb-option >
+    </nb-select>
+    <ngb-pagination [collectionSize]="totalSize" [(page)]="pageIndex" [maxSize]="10"
+                    [pageSize]="pageSize" (pageChange)="search()">
+    </ngb-pagination>
+  </div>
+</nb-card-body>
+</nb-card>
