--- a/nlp/admin/web/src/app/intents/quality/intent-qa.component.html
+++ b/nlp/admin/web/src/app/intents/quality/intent-qa.component.html
@@ -14,42 +14,37 @@
   ~ limitations under the License.
   -->
 
-<nb-card class="intents">
-
-  <nb-card-header id="intent-qa-update-container">
-    <mat-form-field>
-      <input matInput placeholder="Filter Occurrences Less Than" type="number" [(ngModel)]="minOccurrences"
+<nb-card>
+  <nb-card-body id="intent-qa-update-container">
+    <span class="nb-form-field inline">
+      <label>Filter Occurrences Less Than</label>
+      <input nbInput placeholder="Filter Occurrences Less Than" type="number" [(ngModel)]="minOccurrences"
              (keyup.enter)="updateContent()"/>
-    </mat-form-field>
-    <button mat-button (click)="updateContent()" matTooltip="Refresh">
-      <mat-icon>refresh</mat-icon>
-    </button>
-  </nb-card-header>
+      <button nbButton ghost size="small" (click)="updateContent()" nbTooltip="Refresh">
+        <mat-icon>refresh</mat-icon>
+      </button>
+    </span>
+  </nb-card-body>
+</nb-card>
+<nb-card>
   <nb-card-body>
-    <mat-table #table [dataSource]="dataSource">
-
-      <ng-container matColumnDef="intent1">
-        <mat-header-cell *matHeaderCellDef>Intent 1</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.intent1}}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="intent2">
-        <mat-header-cell *matHeaderCellDef>Intent 2</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.intent2}}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="occurrences">
-        <mat-header-cell *matHeaderCellDef>Occurrences</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.occurrences}}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="average">
-        <mat-header-cell *matHeaderCellDef>Average Diff</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.average | number : '1.0-3'}}</mat-cell>
-      </ng-container>
-
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
+    <table class="table table-sm">
+      <thead>
+      <tr>
+        <th scope="col"><p>Intent 1</p></th>
+        <th scope="col"><p>Intent 2</p></th>
+        <th scope="col"><p>Occurrences</p></th>
+        <th scope="col"><p>Average Diff</p></th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let row of dataSource; index as i">
+        <td><p>{{row.intent1}}</p></td>
+        <td><p>{{row.intent2}}</p></td>
+        <td><p>{{row.occurrences}}</p></td>
+        <td><p>{{row.average | number : '1.0-3'}}</p></td>
+      </tr>
+      </tbody>
+    </table>
   </nb-card-body>
 </nb-card>
