resolves #1157 Use nebular components in new bot configuration screen

--- a/bot/admin/web/src/app/configuration/bot/new-bot.component.css
+++ b/bot/admin/web/src/app/configuration/bot/new-bot.component.css
@@ -43,3 +43,20 @@
   height:800px;
   background-color: white;
 }
+
+.submit-btn {
+  text-align: center;
+  display: block;
+}
+
+.btn-margin {
+  margin: 5px;
+}
+
+.list {
+  width: 15rem;
+}
+
+.group-margin-top {
+  margin-top: 2rem;
+}
