--- a/bot/admin/web/src/app/configuration/bot/new-bot.component.html
+++ b/bot/admin/web/src/app/configuration/bot/new-bot.component.html
@@ -13,55 +13,59 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<div class="container">
-  <mat-horizontal-stepper [linear]="true" #stepper class="stepper">
-    <mat-step [stepControl]="firstFormGroup">
-      <form [formGroup]="firstFormGroup">
-        <ng-template matStepLabel>Choose your language</ng-template>
-        <mat-form-field>
-          <mat-select placeholder="Language" formControlName="firstCtrl" required>
-            <mat-option *ngFor="let l of state.locales; let i = index"
-                        [value]="l.first">{{l.second }}</mat-option>
-          </mat-select>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-    <mat-step [stepControl]="secondFormGroup">
-      <form [formGroup]="secondFormGroup">
-        <ng-template matStepLabel>Select a first Channel</ng-template>
-        <mat-form-field>
-          <mat-select required placeholder="Channel" [formControl]="channel">
-            <mat-select-trigger>
-            <span *ngIf="channel.value" class="connector">
-              <img src="{{channel.value.iconUrl()}}" class="connector-icon"
-                   [matTooltip]="channel.value.label()"/> {{ channel.value.label() }}
-            </span>
-            </mat-select-trigger>
-            <mat-option *ngFor="let c of connectorTypes"
-                        [value]="c" class="connector"><img src="{{c.iconUrl()}}" class="connector-icon"
-                                                           [matTooltip]="c.label()"/> {{ c.label() }}</mat-option>
-          </mat-select>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-    <mat-step>
-      <ng-template matStepLabel>Create your Assistant</ng-template>
-      <p class="create">
-        After clicking on the "Create" button, you would have to enter a few first user phrases for your Assistant.
-      </p>
-      <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button (click)="stepper.reset()">Reset</button>
-        <button mat-raised-button (click)="validate()" color="primary">Create</button>
-      </div>
-    </mat-step>
-  </mat-horizontal-stepper>
-  <div class="fill-remaining-space"></div>
-</div>
+
+  <nb-card>
+    <nb-card-body style="padding: 2rem 5.5rem;">
+  
+      <nb-stepper #stepper [linear]="true">
+  
+        <nb-step [stepControl]="languageForm" label="Choose your language" >
+          <form #languageForm="ngForm" [formGroup]="firstFormGroup" class="step-container">
+            <div class="input-group group-margin-top">
+              <nb-select placeholder="Language" formControlName="firstCtrl" required class="list">
+                <nb-option *ngFor="let l of state.locales; let i = index"
+                            [value]="l.first">{{l.second }}</nb-option>
+              </nb-select>
+            </div>
+            <div class="submit-btn">
+              <button nbButton nbStepperNext [status]="firstFormGroup.invalid ? 'basic' : 'primary'">next</button>
+            </div>
+          </form>
+        </nb-step>
+  
+        <nb-step [stepControl]="channelForm" label="Select a first Channel">
+          <form #channelForm="ngForm" [formGroup]="secondFormGroup">
+            <div class="input-group group-margin-top">
+              <nb-select required placeholder="Channel" [formControl]="channel" class="list">
+                <span *ngIf="channel.value" class="connector">
+                  <img src="{{channel.value.iconUrl()}}" class="connector-icon"
+                       [matTooltip]="channel.value.label()"/> {{ channel.value.label() }}
+                </span>
+                <nb-option *ngFor="let c of connectorTypes" [value]="c" class="connector">
+                    <img src="{{c.iconUrl()}}" class="connector-icon" [nbTooltip]="c.label()"/> {{ c.label() }}
+                </nb-option>
+              </nb-select>
+            </div>
+            <div class="submit-btn">
+              <button nbButton nbStepperPrevious class="btn-margin" status="primary">prev</button>
+              <button nbButton nbStepperNext class="btn-margin" [status]="channel.invalid ? 'basic' : 'primary'">next</button>
+            </div>
+          </form>
+        </nb-step>
+  
+        <nb-step [stepControl]="somethingForm" label="Create your Assistant" >
+          <form #somethingForm="ngForm" class="step-container">
+            <div class="input-group group-margin-top">
+              <p class="create">
+                After clicking on the "Create" button, you would have to enter a few first user phrases for your Assistant.
+              </p>
+            </div>
+            <div class="submit-btn">
+              <button nbButton status="basic" class="btn-margin" (click)="stepper.reset()">Reset</button>
+              <button nbButton status="primary" class="btn-margin" (click)="validate()" color="primary">Create</button>
+            </div>
+          </form>
+        </nb-step>
+      </nb-stepper>
+    </nb-card-body>
+  </nb-card>
