fixes #1192 admin subdirectory is broken
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
@@ -109,7 +109,7 @@
           </tr>
           <tr *ngIf="loading">
             <td colspan="3">
-              <img src="/assets/images/loading.gif" width="40px" height="40px"/>
+              <img src="{{baseHref}}assets/images/loading.gif" width="40px" height="40px"/>
             </td>
           </tr>
         </table>
