--- a/bot/admin/web/src/app/theme/components/header/header.component.html
+++ b/bot/admin/web/src/app/theme/components/header/header.component.html
@@ -20,7 +20,7 @@
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
     <div class="logo" (click)="goToHome()">
-      <img class="logo-img" src="/assets/images/logo-black.svg"/>
+      <img class="logo-img" src="{{baseHref}}assets/images/logo-black.svg"/>
       Tock Studio
     </div>
   </div>
