--- a/bot/admin/web/src/app/shared/bot-dialog/display-dialog.component.html
+++ b/bot/admin/web/src/app/shared/bot-dialog/display-dialog.component.html
@@ -39,7 +39,7 @@
                  src="{{userPicture? userPicture : action.connectorType.iconUrl()}}"
                  class="connector"/>
             <img *ngIf="action.test"
-                 src="/assets/images/test_action.svg"
+                 src="{{baseHref}}assets/images/test_action.svg"
                  class="testAction"
                  nbTooltip="Test action"/>
             <tock-bot-message [message]="action.message" [user]="true"></tock-bot-message>
